--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.3.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>5.3.4</version>
+			<scope>test</scope>
+		</dependency>
 
 
 		<!-- AOP -->
@@ -64,6 +71,14 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.18</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<!-- MYBATIS -->
 		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
