--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,6 +63,23 @@
 		<servlet-name>store</servlet-name>
 		<url-pattern>*.sdo</url-pattern>
 	</servlet-mapping>
+	
+	<!-- Board -->
+	<servlet>
+		<servlet-name>board</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/config/boardContext/board-servlet.xml
+ 				<!-- 여기다가 팀원들이 만들 컨텍스트를 등록하면 된다. -->
+ 			</param-value>
+		</init-param>
+		<load-on-startup>3</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>board</servlet-name>
+		<url-pattern>*.bdo</url-pattern>
+	</servlet-mapping>
 
 	<filter>
 		<filter-name>encodingFilter</filter-name>
