--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -81,5 +81,22 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	
+	<error-page>
+	    <exception-type>java.lang.Throwable</exception-type>
+	    <location>/WEB-INF/views/user/error.jsp</location>
+	</error-page>
+
+	<error-page>
+	    <error-code>404</error-code>
+	    <location>/WEB-INF/views/user/error.jsp</location>
+	</error-page>
+
+	<error-page>
+	    <error-code>500</error-code>
+	    <location>/WEB-INF/views/user/error.jsp</location>
+	</error-page>
+
 
 </web-app>
