1. 매장찾기 - 로딩시 현위치 기반으로 지도띄우기 설정, 2. 주문하기 em클래스 포인터 설정, 3. 오더컨트롤러 정리, 4. 에러페이지 핸들링 관련 수정

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,8 +67,7 @@
 		<url-pattern>*.sdo</url-pattern>
 	</servlet-mapping>
 
-	
-
+	<!-- Encoding 설정 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -82,14 +81,19 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-	
+	<!-- 예외페이지 핸들링  -->
 	<error-page>
-	    <exception-type>java.lang.Throwable</exception-type>
+	    <exception-type>java.lang.Exception</exception-type>
 	    <location>/WEB-INF/views/user/error.jsp</location>
 	</error-page>
 
 	<error-page>
 	    <error-code>404</error-code>
+	    <location>/WEB-INF/views/user/error.jsp</location>
+	</error-page>
+	
+	<error-page>
+	    <error-code>405</error-code>
 	    <location>/WEB-INF/views/user/error.jsp</location>
 	</error-page>
 
