--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Security 설정 -->
+		<!-- 암호화 Security 설정 -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -162,19 +162,19 @@
 			<version>5.4.5</version>
 		</dependency>
 
+
+		<!-- 이미지 웹서버 구축 -->
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.11.973</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.5.2</version>
 			<scope>runtime</scope>
 		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -190,12 +190,14 @@
 			<version>1.4</version>
 		</dependency>
 
-		<!-- naver -->
+
+		<!-- naver 소셜 로그인 -->
 		<dependency>
 			<groupId>com.github.scribejava</groupId>
 			<artifactId>scribejava-core</artifactId>
 			<version>2.8.1</version>
 		</dependency>
+		
 		
 		<!-- 엑셀  -->
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
@@ -209,6 +211,14 @@
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>3.17</version>
+		</dependency>
+		
+		<!-- PDF -->
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itextpdf</artifactId>
+		    <version>5.5.13.1</version>
 		</dependency>
 		
 
